compute.tf
resource "aws_instance" "WebServer1" {
        ami = "ami-06c68f701d8090592"
        instance_type = "t2.micro"
        key_name = "my-ec2-key"
        network_interface {
                network_interface_id = aws_network_interface.nw-interface1.id
                device_index = 0
                        }
        tags = {
                Name = "WebServer1"
                }
        }

resource "aws_instance" "WebServer2" {
        ami = "ami-06c68f701d8090592"
        instance_type = "t2.micro"
        network_interface {
                network_interface_id = aws_network_interface.nw-interface2.id
                device_index = 0
                        }
        key_name = "my-ec2-key"
        tags = {
                Name = "WebServer2"
                }
        }

output "instance1_id" {
        value = aws_instance.WebServer1.id
        }
output "instance2_id" {
        value = aws_instance.WebServer2.id
        }
