subnet_route_table_association.tf
resource "aws_route_table_association" "AppSubnet1_association" {
        subnet_id = aws_subnet.AppSubnet1.id
        route_table_id = aws_route_table.AppRouteTable.id
        }
resource "aws_route_table_association" "AppSubnet2_association" {
        subnet_id = aws_subnet.AppSubnet2.id
        route_table_id = aws_route_table.AppRouteTable.id
        }
